1998-12-14  David Faure  <faure@kde.org>

	* Sven Radej added fusion of global & local mimetypes (same for applications) :
	"Whenever you open global or local mimelnk dir, first local and then global
	mimelink dir is scanned and all items are shown like they are in your local
	dir; duplicated entries from global dir are discarded. You can try to delete
	or move to trash any of them; if they are your local copy they will be
	deleted, (although you will continue to see global one). If they are not your
	local copy normal error is issued (Cannot move, bla, bly permission denied).
	This works for mime *and* applnk directories."

1998-12-13  Waldo Bastian  <bastian@kde.org>

        * Created popup window asking the user what to do with incoming
        HTTP-cookies.

        * Fixed timezone bug in kcookiejar.cpp (BSD only). 

1998-12-12  David Faure  <faure@kde.org>

	* popup.cpp, popup.h : Created for the KNewMenu class. Moved code
	from kfmgui.cpp, root.cpp, kfmtree.cpp, kfmman.cpp
	This improves maintenance (code in one place), binary size (again), and fixes
	the "new templates not being shown" bug, reported by Jason Boxman <benefits@cybertechs.com>

1998-12-09  David Faure  <faure@kde.org>

	* Removed all the files containing the old 'configure browser'
	dialog box. Everything is now in kcmkfm.
	There are now two menu entries : Configure File Manager... and
	Configure Browser... which call kcmkfm with different options.
	
	* kfmgui.cpp, kfmman.*, kfmtree.*:
	Patch from Michael Reiher <michael.reiher@gmx.de> to use i18n'ed comments
        instead of filenames in the 'New' menu. Looks a lot better :)

	* kfmman.cpp: Fixed Visual Schnauzer for files with special chars
	such as "'". Bug reported by Christian Fertig
	<fertig@informatik.uni-frankfurt.de>.
	
	* kfmgui.cpp: Added slotConfigure, which re-reads the
	configuration and applies it.

1998-12-07  Alex Zepeda  <garbanzo@hooked.net>

	* kbind.cpp: Quashed another "uninitalized" variable.
